components/2-nodejs/base/.tekton/build-webhook-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    build.appstudio.openshift.io/application: local-transit
    build.appstudio.openshift.io/build: "true"
    build.appstudio.openshift.io/component: 2-nodejs
    build.appstudio.openshift.io/type: build
    build.appstudio.openshift.io/version: "0.1"
    pipelines.appstudio.openshift.io/type: build
  creationTimestamp: null
  name: el2-nodejs
  namespace: shbose
spec:
  path: /
  port:
    targetPort: 8080
  to:
    kind: Service
    name: el-2-nodejs
    weight: null
status: {}
